// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Icon Branded - icon facebook renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--facebook\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon instagram renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--instagram\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon linkedin renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--linkedin\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon pinterest renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--pinterest\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon rss renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--rss\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon skype renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--skype\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon twitter renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--twitter\\"></use></svg>"
`;

exports[`EC - Icon Branded - icon youtube renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#branded--youtube\\"></use></svg>"
`;

exports[`EC - Icon General - icon audio renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--audio\\"></use></svg>"
`;

exports[`EC - Icon General - icon book renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--book\\"></use></svg>"
`;

exports[`EC - Icon General - icon calendar renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--calendar\\"></use></svg>"
`;

exports[`EC - Icon General - icon copy renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--copy\\"></use></svg>"
`;

exports[`EC - Icon General - icon digital renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--digital\\"></use></svg>"
`;

exports[`EC - Icon General - icon edit renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--edit\\"></use></svg>"
`;

exports[`EC - Icon General - icon faq renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--faq\\"></use></svg>"
`;

exports[`EC - Icon General - icon feedback renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--feedback\\"></use></svg>"
`;

exports[`EC - Icon General - icon file renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--file\\"></use></svg>"
`;

exports[`EC - Icon General - icon gear renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--gear\\"></use></svg>"
`;

exports[`EC - Icon General - icon generic-lang renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--generic-lang\\"></use></svg>"
`;

exports[`EC - Icon General - icon global renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--global\\"></use></svg>"
`;

exports[`EC - Icon General - icon growth renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--growth\\"></use></svg>"
`;

exports[`EC - Icon General - icon hamburger renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--hamburger\\"></use></svg>"
`;

exports[`EC - Icon General - icon image renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--image\\"></use></svg>"
`;

exports[`EC - Icon General - icon infographic renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--infographic\\"></use></svg>"
`;

exports[`EC - Icon General - icon language renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--language\\"></use></svg>"
`;

exports[`EC - Icon General - icon livestreaming renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--livestreaming\\"></use></svg>"
`;

exports[`EC - Icon General - icon location renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--location\\"></use></svg>"
`;

exports[`EC - Icon General - icon log-in renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--log-in\\"></use></svg>"
`;

exports[`EC - Icon General - icon logged-in renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--logged-in\\"></use></svg>"
`;

exports[`EC - Icon General - icon multiple-files renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--multiple-files\\"></use></svg>"
`;

exports[`EC - Icon General - icon organigram renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--organigram\\"></use></svg>"
`;

exports[`EC - Icon General - icon print renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--print\\"></use></svg>"
`;

exports[`EC - Icon General - icon regulation renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--regulation\\"></use></svg>"
`;

exports[`EC - Icon General - icon search renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--search\\"></use></svg>"
`;

exports[`EC - Icon General - icon share renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--share\\"></use></svg>"
`;

exports[`EC - Icon General - icon spinner renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--spinner\\"></use></svg>"
`;

exports[`EC - Icon General - icon spreadsheet renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--spreadsheet\\"></use></svg>"
`;

exports[`EC - Icon General - icon tag renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--tag\\"></use></svg>"
`;

exports[`EC - Icon General - icon video renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--video\\"></use></svg>"
`;

exports[`EC - Icon Generic tests - Any icon renders correctly with extra attributes 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
   data-test=\\"data-test-value\\" data-test-1=\\"data-test-value-1\\"><use xlink:href=\\"/icons.svg#general--audio\\"></use></svg>"
`;

exports[`EC - Icon Generic tests - Any icon renders correctly with extra class names 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m custom-class custom-class--test\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--audio\\"></use></svg>"
`;

exports[`EC - Icon Notifications - icon error renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#notifications--error\\"></use></svg>"
`;

exports[`EC - Icon Notifications - icon information renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#notifications--information\\"></use></svg>"
`;

exports[`EC - Icon Notifications - icon success renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#notifications--success\\"></use></svg>"
`;

exports[`EC - Icon Notifications - icon warning renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#notifications--warning\\"></use></svg>"
`;

exports[`EC - Icon UI - icon check renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--check\\"></use></svg>"
`;

exports[`EC - Icon UI - icon check-filled renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--check-filled\\"></use></svg>"
`;

exports[`EC - Icon UI - icon close renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--close\\"></use></svg>"
`;

exports[`EC - Icon UI - icon close-filled renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--close-filled\\"></use></svg>"
`;

exports[`EC - Icon UI - icon corner-arrow renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--corner-arrow\\"></use></svg>"
`;

exports[`EC - Icon UI - icon download renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--download\\"></use></svg>"
`;

exports[`EC - Icon UI - icon external renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--external\\"></use></svg>"
`;

exports[`EC - Icon UI - icon fullscreen renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--fullscreen\\"></use></svg>"
`;

exports[`EC - Icon UI - icon minus renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--minus\\"></use></svg>"
`;

exports[`EC - Icon UI - icon plus renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--plus\\"></use></svg>"
`;

exports[`EC - Icon UI - icon rounded-arrow renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--rounded-arrow\\"></use></svg>"
`;

exports[`EC - Icon UI - icon solid-arrow renders correctly 1`] = `
"<svg
  class=\\"ecl-icon ecl-icon--m\\"
  focusable=\\"false\\"
  aria-hidden=\\"true\\"
  ><use xlink:href=\\"/icons.svg#general--solid-arrow\\"></use></svg>"
`;
